actualizacion y mejora entities
Importacion de fk en entity producto desde entity sector, creacion de SectorRepository y SectorService.

--- a/src/main/resources/templates/insertarProducto.html
+++ b/src/main/resources/templates/insertarProducto.html
@@ -31,6 +31,11 @@
                 <td><label for="precio">Precio: </label></td>
                 <td><input type="number" th:field="*{precio}" /></td>
             </tr>
+           
+             <tr>
+                <td><label for="sector">Sector: </label></td>
+                <td><input type="number" th:field="*{sector}" /></td>
+            </tr>
             <tr>
                 <td><label for="paisOrigen">Pais Origen: </label></td>
                 <td><input type="text" th:field="*{paisOrigen}" /></td>
